--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -166,9 +166,9 @@
 				</td>	
 			</tr>
 			<tr>
-				<td class="hdr-label">Description</td>
+				<td class="hdr-label">Introduction</td>
 				<td>
-					<textarea formControlName="description"></textarea>
+					<textarea formControlName="introduction"></textarea>
 				</td>
 			</tr>
 			<tr>
