--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -27,10 +27,6 @@
 			</p>
 			
 			<div class="action-buttons">
-				<!--  
-				<button class="btn btn-secondary action-btn" 					(click)="showJustMyCandidates()" 	*ngIf="!showJustMyCandidatesActive">My Candidate</button>
-				<button class="btn btn-secondary action-btn" 					(click)="fetchOfferedCandidates()" *ngIf="showJustMyCandidatesActive">All Candidates</button>
-				-->
 				<button class="btn btn-secondary action-btn  main-action_btn" 	(click)="switchTab('addSupply')" 	*ngIf="!isAuthenticatedAsAdmin()">Offer Candidate</button>
 			</div>
 			<!-- List of offered Candidates -->
@@ -46,14 +42,8 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr *ngFor="let candidate of offeredCandidates" class="as-link">
-						<!--  
-							<td class="table-bdy-td" *ngIf="candidate.viewed || !isNotMineOC(candidate)" (click)="viewCandidate(candidate)">{{candidate.created}}</td>
-							<td class="table-bdy-td" *ngIf="!candidate.viewed && isNotMineOC(candidate)" (click)="viewCandidate(candidate)"><b>{{candidate.created}}</b></td>
-							<td class="table-bdy-td" *ngIf="candidate.viewed || !isNotMineOC(candidate)" (click)="viewCandidate(candidate)">{{candidate.candidateRoleTitle}}</td>
-							<td class="table-bdy-td" *ngIf="!candidate.viewed && isNotMineOC(candidate)" (click)="viewCandidate(candidate)"><b>{{candidate.candidateRoleTitle}}</b></td>
-						-->
-							<td class="table-bdy-td" (click)="viewCandidate(candidate)" align="center">
+						<tr *ngFor="let candidate of offeredCandidates" class="as-link" (click)="viewCandidate(candidate)">
+							<td class="table-bdy-td" align="center">
 								<span title="{{candidate.country}}" *ngIf="candidate.country === 'NETHERLANDS'"  		class="flag-icon flag-icon-nl"></span>
 								<span title="{{candidate.country}}" *ngIf="candidate.country === 'BELGIUM'"				class="flag-icon flag-icon-be"></span>
 								<span title="{{candidate.country}}" *ngIf="candidate.country === 'UK'"					class="flag-icon flag-icon-gb"></span>
@@ -64,150 +54,12 @@
 							<td>{{candidate.firstname}}</td>
 							<td>{{candidate.surname}}</td>
 							<td>{{candidate.roleSought}}</td>
-							<!--  
-							<td class="table-bdy-td" (click)="viewCandidate(candidate)" *ngIf="!showJustMyCandidatesActive && (candidate.viewed || !isNotMineOC(candidate))">{{candidate.contractType}}</td>
-							<td class="table-bdy-td" (click)="viewCandidate(candidate)" *ngIf="!showJustMyCandidatesActive && !candidate.viewed && isNotMineOC(candidate)"><b>{{candidate.contractType}}</b></td>
-							-->
-							<!-- 
-							<td *ngIf="showJustMyCandidatesActive">
-								<div *ngIf="!isAuthenticatedAsAdmin()">
-									<button class="btn btn-secondary btnRight main-btns" (click)="editOfferedCandidate(candidate)">Edit</button>
-									<button class="btn btn-secondary btnRight main-btns" *ngIf="confirmDeleteCandidate != candidate.id"  (click)="deleteMyCandidate(candidate.id)">Delete</button>
-									<button class="btn btn-secondary btnRight main-btns small-action-btn-confirm-del" *ngIf="confirmDeleteCandidate === candidate.id" (click)="applyDeleteMyCandidate(candidate.id)">Confirm</button>
-								</div>
-							</td>
-							-->
 						</tr>
 					</tbody>	
 				</table>
 			</div>
 		</div>
 		
-		<!-- Show Supply Details -->
-		<div *ngIf="showSupplyDetails">
-			<div class="action-buttons">
-				<button class="btn btn-secondary btnRight main-btns" *ngIf="isMyCandidate()" (click)="editOfferedCandidate(activeCandidate)">Edit</button>
-				<button class="btn btn-secondary btnRight main-btns" *ngIf="isMyCandidate() && confirmDeleteCandidate != activeCandidate.id"  (click)="deleteMyCandidate(activeCandidate.id)">Delete</button>
-				<button class="btn btn-secondary btnRight main-btns small-action-btn-confirm-del" *ngIf="isMyCandidate() && confirmDeleteCandidate === activeCandidate.id" (click)="applyDeleteMyCandidate(activeCandidate.id)">Confirm</button>
-				<button class="btn btn-secondary btnRight main-btns" (click)="showOfferedCandidates()">Back</button>
-			</div>
-			<div>
-      			<div style="float:left; min-width:300px; margin-top:20px;">
-      				<h1 *ngIf="isMobile" class="listing-view-title">{{activeCandidate.candidateRoleTitle}}</h1>
-      				<div class="left-box">
-     					<div>
-     						<img class="profile-photo-details" *ngIf="!isMobile && recruiterProfile?.profilePhoto?.imageBytes" id='base64image' src='data:image/jpeg;base64, {{recruiterProfile?.profilePhoto?.imageBytes}}' />
-							<div *ngIf="!recruiterProfile?.profilePhoto?.imageBytes && !isMobile" class="profile-photo-details material-icons person ">
-								<span style="font-size:300px;color:green;">person</span>
-							</div>
-							<br>
-							<br>
-							<button class="btn btn-secondary action-btn main-action_btn main-btns main-bt" style="width:300px;margin-bottom:10px;background:grey;"(click)="contactRecruiter(contactBox)" *ngIf="isMyCandidate()" disabled>Contact</button>
-							<button class="btn btn-secondary action-btn main-action_btn main-btns main-bt" style="width:300px;margin-bottom:10px;background:green;" (click)="contactRecruiter(contactBox)" *ngIf="!isMyCandidate()">Contact</button>
-							<br>
-     					</div>
-     				</div>
-     				<div class="left-box-title"  *ngIf="activeCandidate?.recruiter">
-      					<h5>Offered By</h5>
-      				</div>
-     				<div class="left-box"  *ngIf="activeCandidate?.recruiter">
-     					<div class="left-box-body">
-      						<table>
-      							<tr>
-      								<th>Name</th>
-      								<td>{{activeCandidate?.recruiter?.recruiterName}}</td>
-      							</tr>
-      							<tr>
-      								<th>Company</th>
-      								<td>{{activeCandidate?.recruiter?.companyName}}</td>
-      							</tr>
-      						</table>
-     					</div>
-     				</div>
-     				<div class="left-box-title">
-      					<h5>Candidate Details</h5>
-      				</div>
-      				<div class="left-box" *ngIf="activeCandidate.country || activeCandidate.location">
-						<h5>Location</h5>
-						<div class="left-box-body">
-							<table>
-								<tr *ngIf="activeCandidate.country">
-									<th>Country</th>
-									<td>{{getCountryCode(activeCandidate.country)}}</td>
-								</tr>
-								<tr *ngIf="activeCandidate.location">
-									<th>City</th>
-									<td>{{activeCandidate.location}}</td>
-								</tr>
-							</table>
-						</div>
-					</div>
-					<div class="left-box">
-   						<h5>Years Experience</h5>
-   						<div class="left-box-body">
-   							{{activeCandidate.yearsExperience}}
-   						</div>	
-   					</div>
-   					<div class="left-box" *ngIf="activeCandidate.spokenLanguages.length > 0">
-   						<h5>Languages</h5>
-   						<div class="left-box-body">
-							<table>
-								<tr *ngFor="let language of activeCandidate.spokenLanguages">
-									<td>{{getLanguage(language)}}</td>
-								</tr>
-							</table>
-						</div>
-   					</div>
-   					<div class="left-box" *ngIf="activeCandidate.coreSkills.length > 0">
-   						<h5>Skills</h5>
-   						<div class="left-box-body">
-							<table>
-								<tr>
-									<td><span class="skill" *ngFor="let skill of activeCandidate.coreSkills">{{skill}}</span></td>
-								</tr>
-							</table>
-						</div>
-      				</div>	
-      				<div class="left-box" *ngIf="activeCandidate.contractType || activeCandidate.daysOnSite || activeCandidate.renumeration">
-						<h5>Conditions</h5>
-						<div class="left-box-body">
-							<table>
-								<tr *ngIf="activeCandidate.contractType">
-									<th>Contract Type</th>
-									<td>{{getContractType(activeCandidate.contractType)}}</td>
-								</tr>
-								<tr *ngIf="activeCandidate.daysOnSite">
-									<th>Days On Site</th>
-									<td>{{activeCandidate.daysOnSite}}</td>
-								</tr>
-								<tr *ngIf="activeCandidate.renumeration">
-									<th>Rate/Salary</th>
-									<td>{{activeCandidate.renumeration}}</td>
-								</tr>
-							</table>
-						</div>
-					</div>	
-				</div>
-		
-				<div style="float:left;margin-left:10px;min-width:300px;max-width:72%;padding:5px;">
-      				<div class="listing-view-div">
-						<h1 *ngIf="!isMobile" class="listing-view-title">{{activeCandidate.candidateRoleTitle}}</h1>
-						<h1 *ngIf="isMobile" class="listing-view-title">Description</h1>
-					</div>
-					<div>
-						<div>
-							<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{activeCandidate.description}}</pre>
-						</div>
-					</div>
-					<div *ngIf="activeCandidate.comments">
-						<h1 class="listing-view-title">Comments</h1>
-						<div>
-							<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{activeCandidate.comments}}</pre>
-						</div>
-					</div>
-      			</div>
-			</div>
-		</div>
 		<!-- Show Demand  -->
 		<div *ngIf="showDemand">
 			<p>
